# pico_music_examples

simple_wavetable_synth/: CMakeLists.txt  simple_wavetable_synth.cpp  simple_wavetable_synth.hpp
simple_wavetable_synth/tests/: CMakeLists.txt  pico_sdk_import.cmake  test_every_step.cpp  test_time.cpp
simple_wavetable_synth_host_test/: pyproject.toml  save_samples.py
sine_wave_generator/: CMakeLists.txt  sine_wave_generator.cpp
